--- a/public/app/features/features-grid.component.html
+++ b/public/app/features/features-grid.component.html
@@ -10,22 +10,20 @@
                             <th (click)="sort('lastName')">Last Name</th>
                             <th (click)="sort('address')">Address</th>
                             <th (click)="sort('city')">City</th>
-                            <th (click)="sort('state.name')">State</th>
                             <th (click)="sort('orderTotal')">Order Total</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let customer of customers;trackBy:trackby.customer">
-                            <td><img src="images/{{ customer.gender | lowercase }}.png"
-                                    class="card-image" alt="Customer Image" /></td>
-                            <td><a [routerLink]="['/customers',customer._id]">{{ customer.firstName | capitalize }}</a></td>
-                            <td>{{ customer.lastName | capitalize }}</td>
-                            <td>{{ customer.address }}</td>
-                            <td>{{ customer.city | trim }}</td>
-                            <td>{{ customer.state.name }}</td>
-                            <td>{{ customer.orderTotal | currency:'USD':true }}</td>
+                        <tr *ngFor="let feature of features;trackBy:trackby.feature">
+                            <td><img src="images/{{ feature.gender | lowercase }}.png"
+                                    class="card-image" alt="Feature Image" /></td>
+                            <td><a [routerLink]="['/features',feature._id]">{{ feature.firstName | capitalize }}</a></td>
+                            <td>{{ feature.lastName | capitalize }}</td>
+                            <td>{{ feature.address }}</td>
+                            <td>{{ feature.city | trim }}</td>
+                            <td>{{ feature.orderTotal | currency:'USD':true }}</td>
                         </tr>
-                        <tr *ngIf="!customers.length">
+                        <tr *ngIf="!features.length">
                             <td>&nbsp;</td>
                             <td colspan="6">No Records Found</td>
                         </tr>
