--- a/public/app/app.component.html
+++ b/public/app/app.component.html
@@ -1,1 +1,18 @@
-<h1>Helloo!</h1>
+<div class="container">
+    <h1>Simda - Dengue</h1>
+
+    <div class="col-md-3" *ngFor="let year of years">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{year.data}}</h3>
+            </div>
+            <div class="panel-body">
+                <h2>{{year.casos}}</h2>
+                <h3>casos</h3>
+            </div>
+            <div class="panel-footer">
+                <button type="button" class="btn btn-default" (click)=atualizar(year)>Atualizar</button>
+            </div>
+        </div>
+    </div>
+</div>
